Updated Notes