@@ -6,55 +6,17 @@
 #### JVM Commands
 1. [JVM Features & Commands](https://github.com/siripuramjagadishraj1/5.DesingPatternsJava8/tree/master/src)
 
-
-#### Java8 FunctionalProgramming & Stream
-1. PermGen Space Replaced with metaspace
-	*permGen was space of JVM's heap.		 ( -XX:MaxPermSize)
-	*metaspace is part of native OS memory.  ( -XX:MaxMetaspaceSize)
-	-Xms, -Xmx for Heap Memory
-	-Xss for stack Memory
-2. Interface Changes (Default and Static Methods)
-3. Lambda Expressions
-	Functional Interfaces
-	Functional Arguments
-	Lambda Predicate
-	Examples
-		Callables
-		Runnable
-		Comparable and Comparator.
-4. forEach
-5. Pipelines and Streams
-
-6. Date and Time (java.time package)
-7. Type Annotations.
-8. Nashron JavaScript engine.
-9. Concurrent Accumulators
-10. Parallell Operations
-
-11. TLS SNI
-12. Method references
-
-13. Optional
-14. String Joiner
-15. Collectors
-16. Stream Filter
-17. Base64 Encoding
-18. Java Parallell array sorting
-
-
-#### Java8 New Packages
-
+#### Java8 FunctionalProgramming, Stream & New Packages
+1. [Java-8 DurgaSoft](https://github.com/siripuramjagadishraj1/5.DesingPatternsJava8/blob/master/src/javas/java8/Java8TestsDurgaSoft.java)
+2. [Feature List]
+3. [New Packages](https://github.com/siripuramjagadishraj1/5.DesingPatternsJava8/tree/master/src)
 
 #### Java7 Changes
 
-
 #### Java 6 Changes
-
 
 #### Java 5 Changes
 
-
 #### Java 4 Changes
-
 
 #### Java 1 Changes
